// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TextLink Link with icon 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Link with icon
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Text links are used in paragraphs when part of the text needs to be actionable. It inherits the visual style of the parent paragraph. Visit Orbit.Kiwi for more detailed guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <a
            className="TextLink__StyledTextLink-cKDOFV ebltjr"
            data-test={undefined}
            href="https://kiwi.com"
            onClick={[Function]}
            rel={undefined}
            target={undefined}
          >
            TextLink with icon
            <div
              className="TextLink__IconContainer-hjOTaw eWbhZJ"
            >
              <svg
                className="Icon__StyledIcon-ckyxIP fvqkFf"
                data-test={undefined}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </div>
          </a>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        TextLink
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            onClick
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  clicked()
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            href
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                https://kiwi.com
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            icon
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  &lt;ChevronRight /&gt;
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        TextLink with icon
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        TextLink
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextLink Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <a
            className="TextLink__StyledTextLink-cKDOFV cElmdJ"
            data-test="test"
            href="https://kiwi.com"
            onClick={[Function]}
            rel={undefined}
            target="_blank"
          >
            Custom link
            <div
              className="TextLink__IconContainer-hjOTaw ePXFbw"
            >
              <svg
                className="Icon__StyledIcon-ckyxIP fvqkFf"
                data-test={undefined}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </div>
          </a>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        TextLink
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            external
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            onClick
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  clicked()
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            href
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                https://kiwi.com
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            type
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                secondary
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            rel
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#777",
                                    }
                                  }
                                >
                                  null
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            icon
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  &lt;ChevronRight /&gt;
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            dataTest
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                test
                                "
                              </span>
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        Custom link
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        TextLink
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextLink Primary link 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Primary link
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Text links are used in paragraphs when part of the text needs to be actionable. It inherits the visual style of the parent paragraph. Visit Orbit.Kiwi for more detailed guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <a
            className="TextLink__StyledTextLink-cKDOFV ebltjr"
            data-test={undefined}
            href="https://kiwi.com"
            onClick={[Function]}
            rel={undefined}
            target={undefined}
          >
            Primary link
          </a>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        TextLink
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            external
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  false
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            onClick
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  clicked()
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            href
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                https://kiwi.com
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            type
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                primary
                                "
                              </span>
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        Primary link
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        TextLink
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextLink Secondary link 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Secondary link
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Text links are used in paragraphs when part of the text needs to be actionable. It inherits the visual style of the parent paragraph. Visit Orbit.Kiwi for more detailed guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <a
            className="TextLink__StyledTextLink-cKDOFV cElmdJ"
            data-test={undefined}
            href="https://kiwi.com"
            onClick={[Function]}
            rel={undefined}
            target={undefined}
          >
            Secondary link
          </a>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        TextLink
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            external
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  false
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            onClick
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  clicked()
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            href
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                https://kiwi.com
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            type
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                secondary
                                "
                              </span>
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        Secondary link
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        TextLink
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
